redact-pdf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redact-pdf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /redact
        pathType: Prefix
        backend:
          service:
            name: redact-pdf-service
            port:
              number: 80
